--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container text-[20px]">
 
             <label class="text-[#E3F4F4]" for="celsius">Celsius:</label>
-            <input  class="outline-none mb-[10px] rounded-sm bg-[#ffffff00] border-b-[2px] border-[#E3F4F4] text-[#E3F4F4]" id="celsius" />
+            <input placeholder="in degree" class="outline-none mb-[10px] rounded-sm bg-[#ffffff00] border-b-[2px] border-[#E3F4F4] text-[#E3F4F4]" id="celsius" />
            
             <br/>
             <label class="text-[#E3F4F4]" for="fahrenheit">Fahrenheit:</label>
